applied #8895 - Upgrade metadata-extractor to v. 2.6.4 (patch by ebourg)
git-svn-id: http://josm.openstreetmap.de/svn/trunk@6127 0c6e7542-c601-0410-84e7-c038aed88b3b